crates/toml_edit/tests/snapshots/invalid/local-date/no-leads.stderr
TOML parse error at line 2, column 12
  |
2 | no-leads = 1987-7-05
  |            ^^^^^^^^^
invalid date, expected a two-digit month (MM)
